--- a/index.html
+++ b/index.html
@@ -11,11 +11,51 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>test</h1>
-    <h1 class="bg-red-700 p-6">test</h1>
-    <h1>test</h1>
-    <h1>test</h1>
-    <h1>test</h1>
+    <div class="mainContainer">
+      <!-- navbar starts  -->
+
+      <div class="navContainer">
+        <div
+          class="navWrapper w-[95%] sm:w-[90%] m-auto py-6 flex justify-between items-center self-center border-b border-gray-300"
+        >
+          <!-- Left side of nav starts  -->
+
+          <div class="navLeft">
+            <div class="leftLogoContainer w-[80%] sm:w-full">
+              <img src="images/Logo.png" class="w-full h-full cursor-pointer" />
+            </div>
+          </div>
+
+          <!-- Left side of nav ends -->
+
+          <!-- middle side of navbar starts  -->
+
+          <div class="navMiddle">
+            <div
+              class="navMiddleContainer bg-slate-300 py-[.3rem] px-3 sm:py-[.4rem] sm:px-5 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97]"
+            >
+              <h1>Sort by view</h1>
+            </div>
+          </div>
+
+          <!-- middle side of navbar ends  -->
+
+          <!-- right side of navbar starts  -->
+
+          <div class="navRight">
+            <div
+              class="navRightContainer bg-red-600 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 text-sm sm:text-base text-white font-semibold cursor-pointer rounded hover:shadow active:scale-[.97]"
+            >
+              <h1>Blog</h1>
+            </div>
+          </div>
+
+          <!-- right side of navbar ends -->
+        </div>
+      </div>
+
+      <!-- navbar ends  -->
+    </div>
 
     <script src="script.js"></script>
   </body>
