category section done , without api call

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="mainContainer">
       <!-- navbar starts  -->
 
-      <div class="navContainer">
+      <div class="navContainer mb-6">
         <div
           class="navWrapper w-[95%] sm:w-[90%] m-auto py-6 flex justify-between items-center self-center border-b border-gray-300"
         >
@@ -55,7 +55,54 @@
       </div>
 
       <!-- navbar ends  -->
+
+      <!-- categori container starts  -->
+
+      <div class="categoryContainer bg-green-400">
+        <div class="categoryWrapper bg-blue-300 w-[95%] sm:w-[90%] m-auto py-2">
+          <div
+            class="categoryCardContainer bg-violet-500 flex justify-center items-center"
+          >
+            <!--  -->
+            <div
+              class="categoryCardWrapper mr-4 bg-slate-200 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97]"
+            >
+              <h1>All</h1>
+            </div>
+            <!--  -->
+
+            <!--  -->
+            <div
+              class="categoryCardWrapper bg-slate-300 mr-4 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97]"
+            >
+              <h1>Music</h1>
+            </div>
+            <!--  -->
+
+            <!--  -->
+            <div
+              class="categoryCardWrapper bg-slate-300 mr-4 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97]"
+            >
+              <h1>Comedy</h1>
+            </div>
+            <!--  -->
+
+            <!--  -->
+            <div
+              class="categoryCardWrapper bg-slate-300 mr-4 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97]"
+            >
+              <h1>Drawing</h1>
+            </div>
+            <!--  -->
+
+            <!--  -->
+          </div>
+        </div>
+      </div>
+
+      <!-- categori container ends  -->
     </div>
+    <!-- main container ends  -->
 
     <script src="script.js"></script>
   </body>
