category api call done

--- a/index.html
+++ b/index.html
@@ -64,35 +64,12 @@
             class="categoryCardContainer bg-violet-500 flex justify-center items-center"
           >
             <!--  -->
-            <div
-              class="categoryCardWrapper mr-4 bg-slate-200 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97]"
+            <!-- <div
+              class="categoryButton mr-2 sm:mr-4 bg-slate-200 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97] active:bg-red-400"
+              onclick=" handleCategoryClick('${element.category_id}') "
             >
               <h1>All</h1>
-            </div>
-            <!--  -->
-
-            <!--  -->
-            <div
-              class="categoryCardWrapper bg-slate-300 mr-4 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97]"
-            >
-              <h1>Music</h1>
-            </div>
-            <!--  -->
-
-            <!--  -->
-            <div
-              class="categoryCardWrapper bg-slate-300 mr-4 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97]"
-            >
-              <h1>Comedy</h1>
-            </div>
-            <!--  -->
-
-            <!--  -->
-            <div
-              class="categoryCardWrapper bg-slate-300 mr-4 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97]"
-            >
-              <h1>Drawing</h1>
-            </div>
+            </div> -->
             <!--  -->
 
             <!--  -->
