card design done

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <!-- categori container starts  -->
 
-      <div class="categoryContainer bg-green-400">
+      <div class="categoryContainer bg-green-400 mb-6">
         <div class="categoryWrapper bg-blue-300 w-[95%] sm:w-[90%] m-auto py-2">
           <div
             class="categoryCardContainer bg-violet-500 flex justify-center items-center"
@@ -78,6 +78,96 @@
       </div>
 
       <!-- categori container ends  -->
+
+      <!-- card container starts  -->
+
+      <div class="cardContainer bg-red-200">
+        <div class="cardWrapper bg-blue-300 w-[95%] sm:w-[90%] m-auto">
+          <!-- card content starts  -->
+          <div class="cardContent bg-pink-400 grid grid-cols-4">
+            <!-- card starts  -->
+
+            <div class="dataCard bg-lime-400">
+              <!-- card top image starts  -->
+              <div class="dataCardTop bg-amber-300 mb-2">
+                <div class="dataCardImg bg-red-500 rounded-md overflow-auto">
+                  <img
+                    src="images/testImg/pic1.jpg"
+                    class="w-full h-full"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <!-- card top image ends -->
+
+              <div class="dataCardBottom bg-teal-400">
+                <div
+                  class="dataCardBottomContainer bg-teal-300 flex justify-between"
+                >
+                  <!-- left side of data starts  -->
+                  <div class="dataCardBottomLeft bg-orange-500 w-[17%]">
+                    <div class="dataCardBottomImg w-[82%] m-auto">
+                      <img
+                        src="images/testImg/user1.jpg"
+                        class="w-full h-full rounded-full"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <!-- left side of data starts  -->
+                  <!--  -->
+
+                  <!-- right side of data card starts  -->
+
+                  <div class="dataCardBottomRight bg-violet-500 w-[82%]">
+                    <!-- bottom right heading starts  -->
+                    <div
+                      class="bottomRightHeading bg-red-500 font-semibold mb-2"
+                    >
+                      <h1>Make A Website With Login And Register | HTML CSS</h1>
+                    </div>
+                    <!-- bottom right heading starts  -->
+                    <!--  -->
+
+                    <!-- bottom card name starts  -->
+                    <div
+                      class="bottomCardName bg-blue-400 mb-2 flex items-center self-center"
+                    >
+                      <p class="bg-yellow-400 inline mr-2 text-[#171717B2]">
+                        Awlad Hossain
+                      </p>
+                      <p class="bg-green-400 inline">
+                        <img src="images/blueTic.svg" alt="" />
+                      </p>
+                    </div>
+                    <!-- bottom card name ends  -->
+
+                    <!--  -->
+
+                    <!-- bottom card views starts  -->
+
+                    <div class="bottomCardViews bg-green-400 text-[#171717B2]">
+                      <p>91K views</p>
+                    </div>
+
+                    <!-- bottom card views ends  -->
+                  </div>
+
+                  <!-- right side of data card ends  -->
+                  <!--  -->
+                </div>
+              </div>
+            </div>
+
+            <!-- card ends -->
+            <!--  -->
+          </div>
+          <!-- card content ends  -->
+          <!--  -->
+        </div>
+      </div>
+
+      <!-- card container ends  -->
     </div>
     <!-- main container ends  -->
 
