card design done with responsiveness

--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
 
       <!-- categori container starts  -->
 
-      <div class="categoryContainer bg-green-400 mb-6">
-        <div class="categoryWrapper bg-blue-300 w-[95%] sm:w-[90%] m-auto py-2">
-          <div
-            class="categoryCardContainer bg-violet-500 flex justify-center items-center"
-          >
+      <div class="categoryContainer mb-9">
+        <div class="categoryWrapper w-[95%] sm:w-[90%] m-auto py-2">
+          <div class="categoryCardContainer flex justify-center items-center">
             <!--  -->
             <!-- <div
               class="categoryButton mr-2 sm:mr-4 bg-slate-200 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97] active:bg-red-400"
@@ -81,16 +79,18 @@
 
       <!-- card container starts  -->
 
-      <div class="cardContainer bg-red-200">
-        <div class="cardWrapper bg-blue-300 w-[95%] sm:w-[90%] m-auto">
+      <div class="cardContainer">
+        <div class="cardWrapper w-[95%] sm:w-[96%] m-auto">
           <!-- card content starts  -->
-          <div class="cardContent bg-pink-400 grid grid-cols-4">
+          <div
+            class="cardContent w-[70%] sm:w-[100%] m-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-4 gap-y-9"
+          >
+            <!--  -->
             <!-- card starts  -->
-
-            <div class="dataCard bg-lime-400">
+            <div class="dataCard">
               <!-- card top image starts  -->
-              <div class="dataCardTop bg-amber-300 mb-2">
-                <div class="dataCardImg bg-red-500 rounded-md overflow-auto">
+              <div class="dataCardTop mb-2">
+                <div class="dataCardImg rounded-md overflow-auto">
                   <img
                     src="images/testImg/pic1.jpg"
                     class="w-full h-full"
@@ -100,12 +100,10 @@
               </div>
               <!-- card top image ends -->
 
-              <div class="dataCardBottom bg-teal-400">
-                <div
-                  class="dataCardBottomContainer bg-teal-300 flex justify-between"
-                >
+              <div class="dataCardBottom">
+                <div class="dataCardBottomContainer flex justify-between">
                   <!-- left side of data starts  -->
-                  <div class="dataCardBottomLeft bg-orange-500 w-[17%]">
+                  <div class="dataCardBottomLeft w-[17%]">
                     <div class="dataCardBottomImg w-[82%] m-auto">
                       <img
                         src="images/testImg/user1.jpg"
@@ -119,37 +117,36 @@
 
                   <!-- right side of data card starts  -->
 
-                  <div class="dataCardBottomRight bg-violet-500 w-[82%]">
+                  <div class="dataCardBottomRight w-[82%]">
                     <!-- bottom right heading starts  -->
                     <div
-                      class="bottomRightHeading bg-red-500 font-semibold mb-2"
+                      class="bottomRightHeading font-semibold mb-2 text-sm lg:text-base"
                     >
                       <h1>Make A Website With Login And Register | HTML CSS</h1>
                     </div>
                     <!-- bottom right heading starts  -->
                     <!--  -->
-
                     <!-- bottom card name starts  -->
                     <div
-                      class="bottomCardName bg-blue-400 mb-2 flex items-center self-center"
+                      class="bottomCardName mb-1 flex items-center self-center"
                     >
-                      <p class="bg-yellow-400 inline mr-2 text-[#171717B2]">
+                      <p
+                        class="inline mr-2 text-[#171717B2] text-sm lg:text-base"
+                      >
                         Awlad Hossain
                       </p>
-                      <p class="bg-green-400 inline">
+                      <p class="inline">
                         <img src="images/blueTic.svg" alt="" />
                       </p>
                     </div>
                     <!-- bottom card name ends  -->
-
                     <!--  -->
-
                     <!-- bottom card views starts  -->
-
-                    <div class="bottomCardViews bg-green-400 text-[#171717B2]">
+                    <div
+                      class="bottomCardViews text-[#171717B2] text-sm lg:text-base"
+                    >
                       <p>91K views</p>
                     </div>
-
                     <!-- bottom card views ends  -->
                   </div>
 
@@ -158,8 +155,8 @@
                 </div>
               </div>
             </div>
-
             <!-- card ends -->
+
             <!--  -->
           </div>
           <!-- card content ends  -->
