title , author name , blue badge done

--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@
             <div class="dataCard">
               <!-- card top image starts  -->
               <div class="dataCardTop mb-2">
-                <div class="dataCardImg rounded-md overflow-auto">
+                <div
+                  class="dataCardImg rounded-md overflow-auto bg-red-600 h-[14rem]"
+                >
                   <img
                     src="images/testImg/pic1.jpg"
-                    class="w-full h-full"
+                    class="w-full h-full object-cover"
                     alt=""
                   />
                 </div>
