time added in card

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <!-- card starts  -->
             <div class="dataCard">
               <!-- card top image starts  -->
-              <div class="dataCardTop mb-2">
+              <div class="dataCardTop mb-2 relative bg-green-500">
                 <div
                   class="dataCardImg rounded-md overflow-auto bg-red-600 h-[14rem]"
                 >
@@ -99,6 +99,16 @@
                     alt=""
                   />
                 </div>
+
+                <!--  -->
+                <!-- date show section starts  -->
+                <div
+                  class="dateShow bg-[#171717] text-white py-1 px-3 rounded-md absolute transform -right-2 -bottom-1 -translate-x-1/2 -translate-y-1/2"
+                >
+                  <h1>date show</h1>
+                </div>
+                <!-- date show section ends  -->
+                <!--  -->
               </div>
               <!-- card top image ends -->
 
