card information showed correctly

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="images/Logo.png" type="image/x-icon" />
+    <title>Monir Tube</title>
 
     <!-- tailwind css file  -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -58,7 +59,7 @@
 
       <!-- categori container starts  -->
 
-      <div class="categoryContainer mb-9">
+      <div class="categoryContainer mb-6">
         <div class="categoryWrapper w-[95%] sm:w-[90%] m-auto py-2">
           <div class="categoryCardContainer flex justify-center items-center">
             <!--  -->
@@ -87,86 +88,9 @@
           >
             <!--  -->
             <!-- card starts  -->
-            <div class="dataCard">
-              <!-- card top image starts  -->
-              <div class="dataCardTop mb-2 relative bg-green-500">
-                <div
-                  class="dataCardImg rounded-md overflow-auto bg-red-600 h-[14rem]"
-                >
-                  <img
-                    src="images/testImg/pic1.jpg"
-                    class="w-full h-full object-cover"
-                    alt=""
-                  />
-                </div>
-
-                <!--  -->
-                <!-- date show section starts  -->
-                <div
-                  class="dateShow bg-[#171717] text-white py-1 px-3 rounded-md absolute transform -right-2 -bottom-1 -translate-x-1/2 -translate-y-1/2"
-                >
-                  <h1>date show</h1>
-                </div>
-                <!-- date show section ends  -->
-                <!--  -->
-              </div>
-              <!-- card top image ends -->
-
-              <div class="dataCardBottom">
-                <div class="dataCardBottomContainer flex justify-between">
-                  <!-- left side of data starts  -->
-                  <div class="dataCardBottomLeft w-[17%]">
-                    <div class="dataCardBottomImg w-[82%] m-auto">
-                      <img
-                        src="images/testImg/user1.jpg"
-                        class="w-full h-full rounded-full"
-                        alt=""
-                      />
-                    </div>
-                  </div>
-                  <!-- left side of data starts  -->
-                  <!--  -->
-
-                  <!-- right side of data card starts  -->
-
-                  <div class="dataCardBottomRight w-[82%]">
-                    <!-- bottom right heading starts  -->
-                    <div
-                      class="bottomRightHeading font-semibold mb-2 text-sm lg:text-base"
-                    >
-                      <h1>Make A Website With Login And Register | HTML CSS</h1>
-                    </div>
-                    <!-- bottom right heading starts  -->
-                    <!--  -->
-                    <!-- bottom card name starts  -->
-                    <div
-                      class="bottomCardName mb-1 flex items-center self-center"
-                    >
-                      <p
-                        class="inline mr-2 text-[#171717B2] text-sm lg:text-base"
-                      >
-                        Awlad Hossain
-                      </p>
-                      <p class="inline">
-                        <img src="images/blueTic.svg" alt="" />
-                      </p>
-                    </div>
-                    <!-- bottom card name ends  -->
-                    <!--  -->
-                    <!-- bottom card views starts  -->
-                    <div
-                      class="bottomCardViews text-[#171717B2] text-sm lg:text-base"
-                    >
-                      <p>91K views</p>
-                    </div>
-                    <!-- bottom card views ends  -->
-                  </div>
-
-                  <!-- right side of data card ends  -->
-                  <!--  -->
-                </div>
-              </div>
-            </div>
+            <!--  -->
+            <!--  -->
+            <!--  -->
             <!-- card ends -->
 
             <!--  -->
