--- a/index.html
+++ b/index.html
@@ -109,14 +109,20 @@
       <div class="cardContainer mb-8">
         <div class="cardWrapper w-[95%] sm:w-[96%] m-auto">
           <!-- card content starts  -->
+
+          <!-- nothing found card starts  -->
+          <div class="nothingFoundCard">
+            <!--  -->
+            <!--  -->
+          </div>
+          <!-- nothing found card ends  -->
+
           <div
             class="cardContent w-[70%] sm:w-[100%] m-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-4 gap-y-9"
           >
             <!--  -->
             <!-- card starts  -->
-            <!--  -->
-            <!--  -->
-            <!--  -->
+
             <!-- card ends -->
 
             <!--  -->
