initial sort function

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
           <div class="navMiddle">
             <div
-              class="navMiddleContainer bg-slate-300 py-[.3rem] px-3 sm:py-[.4rem] sm:px-5 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97]"
+              class="navMiddleContainer bg-slate-300 py-[.3rem] px-3 sm:py-[.4rem] sm:px-5 font-semibold text-sm sm:text-base cursor-pointer rounded hover:shadow active:scale-[.97] sortByView"
             >
               <h1>Sort by view</h1>
             </div>
