--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
       <!-- categori container ends  -->
 
       <!-- loader starts  -->
-      <div
-        class="loader flex items-center justify-center w-full h-[70vh] border border-gray-200 rounded-lg bg-gray-50"
-      >
+      <div class="loader flex items-center justify-center w-full h-[70vh]">
         <div role="status">
           <svg
             aria-hidden="true"
