--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
           <div class="navRight">
             <div
-              class="navRightContainer bg-red-600 py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 text-sm sm:text-base text-white font-semibold cursor-pointer rounded hover:shadow active:scale-[.97]"
+              class="navRightContainer bg-red-600 hover:bg-slate-400 hover:text-black py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 text-sm sm:text-base text-white font-semibold cursor-pointer rounded hover:shadow active:scale-[.97]"
             >
               <a href="data.html">Blog </a>
             </div>
