update on blog html , project 1.8

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div
               class="navRightContainer bg-red-600 hover:bg-slate-400 hover:text-black py-[.3rem] px-4 sm:py-[.4rem] sm:px-6 text-sm sm:text-base text-white font-semibold cursor-pointer rounded hover:shadow active:scale-[.97]"
             >
-              <a href="data.html">Blog </a>
+              <a href="blog.html">Blog </a>
             </div>
           </div>
 
